// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chain '' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`chain '1' Error to match snapshot 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`chain '1bar' AST to match snapshot 1`] = `"bar"`;

exports[`chain '1that' Error to match snapshot 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`chain 'foo' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`chain 'thatthis' Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`chain 'this' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`chain 'thisbar' Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`chain 'thisthat' AST to match snapshot 1`] = `"that"`;
